--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,65 +7,41 @@ on:
 
 jobs:
   build:
-    name: Build and Release Electron App
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/checkout@v3
+        
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
-
-      - name: Install dependencies
+          node-version: 20
+          
+      - name: Install Dependencies
         run: npm install
-
-      - name: Build and Package
+        
+      - name: Build Application
         run: npm run dist
-
+        
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: Release Artifacts
-          path: |
-            dist/*.exe
-            dist/*.dmg
-            dist/*.AppImage
-            dist/*.deb
-            dist/*.rpm
-            dist/*.tar.gz
-            dist/*.zip
-
+          name: release-files
+          path: dist/*
+          
   release:
-    name: Create GitHub Release
     needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Download Artifacts
         uses: actions/download-artifact@v2
         with:
-          name: Release Artifacts
+          name: release-files
           path: dist
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+          
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref_name }}
-          body: 'Release ${{ github.ref_name }}'
-          draft: false
-          prerelease: false
-
-      - name: Upload Release Assets
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist
-          asset_name: ${{ github.ref_name }}
-          asset_content_type: application/zip
