--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,24 +11,24 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          
+
       - name: Install Dependencies
         run: npm install
-        
+
       - name: Build Application
         run: npm run dist
-        
+
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
         with:
           name: release-files
           path: dist/*
-          
+
   release:
     needs: build
     runs-on: ubuntu-latest
@@ -38,10 +38,24 @@ jobs:
         with:
           name: release-files
           path: dist
-          
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: dist/*
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist
+          asset_name: ingress-map-desktop-${{ github.ref }}.zip
+          asset_content_type: application/zip
