--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,13 @@ jobs:
           
       - name: Install Dependencies
         run: npm install
-        
+
+      - name: Install Wine
+        run: |
+          sudo dpkg --add-architecture i386
+          sudo apt-get update
+          sudo apt-get install -y wine wine32 wine64 libwine libwine:i386 fonts-wine
+
       - name: Build Application
         run: npm run dist
         
