--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,3 +46,10 @@ jobs:
 
       - name: Display structure of downloaded files
         run: ls -R
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2.0.4
+        with:
+          files: *
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
