--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,7 @@ jobs:
         uses: actions/download-artifact@v4.1.4
         with:
           name: release-files
+          path: dist
 
       - name: Display structure of downloaded files
         run: ls -R
@@ -50,6 +51,6 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2.0.4
         with:
-          files: *
+          files: dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
