--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,6 @@ jobs:
         uses: actions/download-artifact@v4.1.4
         with:
           name: release-files
-          path: dist
 
       - name: Display structure of downloaded files
         run: ls -R
@@ -51,6 +50,6 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2.0.4
         with:
-          files: dist/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          files: |
+            *.exe
+            *.zip
