--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,9 @@ jobs:
         uses: actions/download-artifact@v4.1.4
         with:
           name: release-files
+      
+      - name: Display structure of downloaded files
+        run: ls -R
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2.0.4
