--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder -w -l -m -p=never"
+    "dist": "electron-builder -w -p=never"
   },
   "license": "MIT",
   "build": {
@@ -25,13 +25,6 @@
         "nsis",
         "portable",
         "zip"
-      ]
-    },
-    "linux": {
-      "target": [
-        "deb",
-        "rpm",
-        "tar.gz"
       ]
     },
     "nsis": {
